<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:fitsSystemWindows="true"
    tools:context="activities.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:lottie_rawRes="@raw/lottieflow_login"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="100dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_your_account_textView"
            android:fontFamily="@font/medium"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/emailEditText"
            style="@style/LoginTextInput"
            android:layout_height="wrap_content"
            android:layout_width="350dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email_hint"
            android:elevation="10dp"
            android:layout_gravity="center"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/LoginTextInput"
            android:layout_height="wrap_content"
            android:layout_width="350dp"
            android:autofillHints="password"
            android:hint="@string/password_hint"
            android:layout_gravity="center"
            android:textColorHint="@color/light_grey"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:inputType="textPassword"
            android:elevation="10dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/forgot_password_login"
            android:textColor="@color/logo_color"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button_Login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_login_tv"

            android:layout_gravity="center"
            android:background="@drawable/rounded_button_with_shadow"
            style="@style/LoginButton"
            android:elevation="4dp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/signInWithTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_in_with_tv"
            android:textColor="@color/light_grey"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/google_login_btn"
                android:layout_width="78dp"
                android:layout_height="54dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/signInBtn"
                android:padding="10dp"
                android:background="@drawable/corner_radius"
                android:elevation="3dp"
                android:scaleType="centerInside"
                android:src="@drawable/google"/>

            <ImageButton
                android:id="@+id/phone_Login"
                android:layout_width="78dp"
                android:layout_height="54dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/phone_login_h"
                android:padding="10dp"
                android:background="@drawable/corner_radius"
                android:elevation="3dp"
                android:scaleType="centerInside"
                android:src="@drawable/telephone"/>
        </LinearLayout>

        <TextView
            android:id="@+id/signUpTextView"
            style="@style/SignUpText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up_tv"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/robot_black"
            android:textColor="@color/logo_color"/>
    </LinearLayout>
</LinearLayout>
