<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
    android:orientation="vertical"
android:layout_height="match_parent"
tools:context=".activities.RegistrationActivity">

    <ImageView
        android:id="@+id/regpagelogo"
        android:layout_width="wrap_content"
        android:layout_height="169dp"
        android:maxHeight="120dp"
        android:src="@drawable/hmlogow">
    </ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/medium"
        android:layout_marginBottom="20dp"
        android:text="Create Account"
        android:shadowColor="@color/black"
        android:background="#3165d9"
        android:textColor="#5ffff4"
        android:textSize="24sp" />
    <EditText
        android:id="@+id/regemail"
        style="@style/LoginTextInput"
        android:hint="@string/email_hint"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:layout_marginEnd="20dp"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp"/>



    <EditText
        android:id="@+id/passwordEditText"
        style="@style/LoginTextInput"
        android:hint="@string/password_hint"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/confirmpasswordEditText"
        style="@style/LoginTextInput"
        android:hint="@string/confirm_password"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword"
        android:layout_marginBottom="8dp"/>

    <CheckBox
        android:id="@+id/checkagreements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="30dp"
        android:shadowColor="#3165d9"
        android:text="I agree to all the Terms and Conditions"
        android:textColor="#3165d9"
        android:textStyle="italic"></CheckBox>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/verifyMail"
        android:text="Verify Mail"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ripple_effect" />




    <Button
        android:id="@+id/btnSignUp"
        style="@style/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:background="#3165d9"
        android:elevation="4dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/checksignintv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="Already have an account? Sign In"
            android:textColor="#3165d9"
            android:textSize="20sp"
            android:textStyle="italic"></TextView>


    </LinearLayout>



</LinearLayout>


